--- a/Java 21/vacations-balance/src/main/resources/vacations-ui.fxml
+++ b/Java 21/vacations-balance/src/main/resources/vacations-ui.fxml
@@ -33,6 +33,7 @@
 -->
 
 <?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -49,8 +50,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1"
-    fx:controller="com.legadi.ui.vacations.controller.AppController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.legadi.ui.vacations.controller.AppController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -104,7 +104,7 @@
                   </Pane>
                   <Pane fx:id="configPane" prefHeight="200.0" prefWidth="200.0" visible="false">
                      <children>
-                        <Accordion layoutX="14.0" layoutY="14.0" prefHeight="345.0" prefWidth="610.0">
+                        <Accordion layoutX="14.0" layoutY="14.0" prefHeight="310.0" prefWidth="610.0">
                           <panes>
                             <TitledPane animated="false" text="Hoja de control anual">
                               <content>
@@ -134,18 +134,25 @@
                                           <TextField fx:id="configPreviousField" layoutX="191.0" layoutY="103.0" />
                                           <Label layoutX="14.0" layoutY="138.0" text="Celda de proporción de días" />
                                           <TextField layoutX="191.0" layoutY="134.0" />
-                                          <Label layoutX="14.0" layoutY="169.0" text="Días permitidos" />
-                                          <Label layoutX="14.0" layoutY="196.0" text="Celda inicial de año" />
-                                          <TextField fx:id="configYearField" layoutX="191.0" layoutY="192.0" />
-                                          <CheckBox fx:id="configHorizontalCheck" layoutX="351.0" layoutY="196.0" mnemonicParsing="false" text="Días en horizontal" />
-                                          <Label layoutX="14.0" layoutY="227.0" text="Columna de días" />
-                                          <TextField fx:id="configColDaysField" layoutX="192.0" layoutY="223.0" />
-                                          <Label layoutX="351.0" layoutY="227.0" text="Fila de días" />
-                                          <TextField fx:id="configRowDaysField" disable="true" layoutX="451.0" layoutY="223.0" />
                                        </children>
                                     </AnchorPane>
                               </content>
                             </TitledPane>
+                              <TitledPane animated="false" text="Configuración para días permitidos">
+                                <content>
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                       <children>
+                                          <Label layoutX="14.0" layoutY="21.0" text="Celda inicial de año" />
+                                          <TextField fx:id="configYearField" layoutX="136.0" layoutY="17.0" />
+                                          <CheckBox fx:id="configHorizontalCheck" layoutX="15.0" layoutY="58.0" mnemonicParsing="false" text="Días en horizontal" />
+                                          <Label layoutX="14.0" layoutY="99.0" text="Columna de días" />
+                                          <TextField fx:id="configColDaysField" layoutX="136.0" layoutY="95.0" />
+                                          <Label layoutX="304.0" layoutY="99.0" text="Fila de días" />
+                                          <TextField fx:id="configRowDaysField" layoutX="387.0" layoutY="95.0" />
+                                       </children>
+                                    </AnchorPane>
+                                </content>
+                              </TitledPane>
                             <TitledPane animated="false" text="Configuración para cálculo">
                               <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
@@ -162,6 +169,7 @@
                             </TitledPane>
                           </panes>
                         </Accordion>
+                        <Button fx:id="saveButton" layoutX="565.0" layoutY="335.0" mnemonicParsing="false" text="Guardar" />
                      </children>
                   </Pane>
                </children>
