--- a/Java 21/vacations-balance/src/main/resources/vacations-ui.fxml
+++ b/Java 21/vacations-balance/src/main/resources/vacations-ui.fxml
@@ -111,9 +111,9 @@
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                        <children>
                                           <Label layoutX="14.0" layoutY="14.0" text="Celda inicial de empleado " />
-                                          <TextField layoutX="179.0" layoutY="10.0" />
+                                          <TextField fx:id="configEmployeeField" layoutX="179.0" layoutY="10.0" />
                                           <Label layoutX="14.0" layoutY="46.0" text="Columna de días tomados" />
-                                          <TextField layoutX="180.0" layoutY="42.0" />
+                                          <TextField fx:id="configTakenField" layoutX="180.0" layoutY="42.0" />
                                        </children>
                                     </AnchorPane>
                               </content>
@@ -133,7 +133,7 @@
                                           <Label layoutX="14.0" layoutY="107.0" text="Celda de días disfrutados" />
                                           <TextField fx:id="configPreviousField" layoutX="191.0" layoutY="103.0" />
                                           <Label layoutX="14.0" layoutY="138.0" text="Celda de proporción de días" />
-                                          <TextField layoutX="191.0" layoutY="134.0" />
+                                          <TextField fx:id="configRatioField" layoutX="191.0" layoutY="134.0" />
                                        </children>
                                     </AnchorPane>
                               </content>
@@ -169,6 +169,7 @@
                             </TitledPane>
                           </panes>
                         </Accordion>
+                        <Button fx:id="resetButton" layoutX="494.0" layoutY="335.0" mnemonicParsing="false" text="Resetear" />
                         <Button fx:id="saveButton" layoutX="565.0" layoutY="335.0" mnemonicParsing="false" text="Guardar" />
                      </children>
                   </Pane>
